# DevopsLabs1

./: .FuncA.cpp.swp  .FuncA_BASE_8732.cpp.swp  .FuncA_LOCAL_8732.cpp.swp  .FuncA_REMOTE_8732.cpp.swp  DockerFile  Dockerfile  FuncA.cpp  FuncA.cpp.orig  FuncA.h  FuncA_BACKUP_8732.cpp  FuncA_BASE_8619.cpp  HTTPserver  HTTPserver.cpp  Makefile  Makefile.am  Makefile.in  ServerTest  ServerTest.cpp  config.status  configure  configure.ac  configure~  deb.deb  main.cpp  sin_func  test  test.cpp
.deps/: HTTPserver.Po  ServerTest-ServerTest.Po  ServerTest.Po  test.Po
.github/workflows/: build.yml  test.yml
autom4te.cache/: output.1  output.2  requests  traces.1
deb/DEBIAN/: control
